# concourse-gitlab-merge-request-resource

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE-APACHE-2.0  README.rst
src/: check.rs  common.rs  in.rs  out.rs
