[package]
name = "concourse-gitlab-merge-request-resource"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Shohei Maruyama <cheat.sc.linux@outlook.com>"]

[[bin]]
name = "check"
path = "src/check.rs"

[[bin]]
name = "in"
path = "src/in.rs"

[[bin]]
name = "out"
path = "src/out.rs"

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
git2 = "0.15.0"
gitlab = "0.1504.0"
glob = "0.3.1"
serde = "1.0.199"
serde_json = "1.0.116"
url = "2.5.0"

[dev-dependencies]
rstest = "0.19.0"
